Edge 16 fix - subnav aligned left-side

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1299,6 +1299,7 @@ iframe {
     }
     .subnav.subnav,
     .subnav-container.subnav-container {
+        text-align: right; /* Edge 16 compatibility */
         background-color: initial;
         box-shadow: none;
     }
